# Dual-Camera-Bokeh

./: CMakeLists.txt  README.md  main.c
data/input/: in_alpha_720_540  in_yuv_1440_1080
include/: file.h  img_utils.h  resize_mask.h  tileManager.h  typedef.h  xi_api.h  xi_config_api.h  xi_core_api.h  xi_drawing_api.h  xi_features2d_api.h  xi_imgproc.h  xi_imgproc_api.h  xi_intrin.h  xi_legacy_api.h  xi_tile_manager.h  xi_video_api.h  xmem.h  xmem_internal.h  xmem_xtos.h
src/: AlphaBlend.c  AlphaBlend.h  BlurImp.c  BlurImp.h  BoxBlur_3x3.c  BoxBlur_3x3.h  BoxBlur_5x5.c  BoxBlur_5x5.h  Combine.c  Combine.cpp  Combine.h  Debug.h  DownScaleBy2.c  DownScaleBy2.h  GaussBlur_3x3.c  GaussBlur_3x3.h  GaussBlur_5x5.c  GaussBlur_5x5.h  Message.c  Message.h  OpencvCommon.h  Separate.c  Separate.h  Seperate.c  Seperate.cpp  Seperate.h  UpDepthByAvg.c  UpDepthByAvg.h  UpScaleBy2.c  UpScaleBy2.h  Utility.c  Utility.h  alphaBlend.c  alphaBlend.h  common.c  common.h  downScaleBy2.cpp  downScaleBy2.h  main.cpp  tileManager.c  (+7 more)
